webapp/channels/src/components/admin_console/license_settings/enterprise_edition/enterprise_edition.scss
.EnterpriseEditionRightPannel {
    .svg-image {
        text-align: center;

        svg {
            margin: 0 auto 24px auto;
        }
    }

    .upgrade-title {
        margin-bottom: 12px;
        color: #3f4350;
        font-family: Metropolis, sans-serif;
        font-size: 16px;
        font-weight: 700;
        line-height: 24px;
    }

    .advantages-list {
        margin: 7px 0;
        font-size: 12px;
        line-height: 16px;

        .item {
            margin: 10px 0;

            i {
                margin-right: 5px;
            }
        }

    }

    button {
        width: 100%;
        margin: 5px auto;
    }

    .purchase_buttons {
        margin-top: 20px;
        .btn-primary {
            margin-bottom: 8px;
        }

        .trial-btn {
            width: 100%;
            margin-left: 0px;
        }
    }

    .upgrade-error {
        margin-top: 10px;
    }
}

.EnterpriseEditionLeftPanel {
    &__Grid {
        display: flex;
    }

    &__Header {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 8px;
    }

    &__Title {
        display: flex;
        align-items: center;
        color: var(--center-channel-color);
        font-family: 'Metropolis', sans-serif;
        font-size: 18px;
        font-weight: 600;
        gap: 8px;
    }

    &__Subtitle {
        margin-top: 20px;
        font-size: 14px;
    }

    .pre-title {
        margin-bottom: 10px;
        color: rgba(63, 67, 80, 0.75) !important;
        font-size: 12px;
        font-weight: 600;
        line-height: 16px;
    }

    .license-notices {
        font-size: 12px;
        p {
            margin-bottom: 0px;
        }
    }

    .licenseInformation {
        padding: 24px;
        border: 1px solid rgba(63, 67, 80, 0.16);
        border-radius: 4px;
        margin: 24px 0;

        &__Header {
            display: flex;
            align-items: center;
            justify-content: space-between;
            font-size: 14px;
            font-weight: 700;
            gap: 8px;
            line-height: 24px;
        }

        &__Title {
            display: inline-block;
            color: #3f4350;
            font-family: 'Metropolis', sans-serif;
            font-size: 16px;
            font-weight: 700;
        }

        .licenseElements {
            .item-element {
                margin: 15px 0;
                font-family: 'Open Sans', sans-serif;
                font-size: 14px;
                line-height: 20px;

                span.legend {
                    display: inline-block;
                    min-width: 210px;
                    color: rgba(var(--secondary-blue-rgb), 0.75);
                    font-weight: 600;

                    &--warning-over-seats-purchased {
                        color: var(--warning-text);
                    }

                    &--over-seats-purchased {
                        color: var(--error-text);
                    }
                }

                span.value {
                    margin-left: 10px;
                    color: var(--secondary-blue);

                    &--warning-over-seats-purchased {
                        color: var(--warning-text);
                        font-weight: 600;
                    }

                    &--over-seats-purchased {
                        color: var(--error-text);
                        font-weight: 600;
                    }
                }

                span.expiration-days {
                    margin-left: 8px;
                    font-size: 14px;
                    font-weight: 600;

                    &-warning {
                        color: var(--sys-away-indicator);
                    }

                    &-danger {
                        color: var(--dnd-indicator);
                    }
                }
            }
        }

        #remove-button {
            padding: 0;
            border: none !important;
            margin: 10px 0;
            background: none !important;
            color: var(--error-text);
            font-weight: 700;

            &:hover {
                text-decoration: underline;
            }

            &:focus,
            &:focus-visible {
                outline: none !important;
            }
        }
    }

    // Entry SKU specific styles
    .have-license-section {
        margin: 24px 0;

        .have-license-title {
            margin: 0 0 4px 0;
            font-family: 'Metropolis', sans-serif;
            font-size: 16px;
            line-height: 24px;
        }


    }
}

